`cabinet_inspector` should be run with `sudo`.

--- a/user/test/FireFerrises/Makefile
+++ b/user/test/FireFerrises/Makefile
@@ -11,6 +11,6 @@ clean:
 PHONY += test-all
 test-all:
 	$(MAKE) -C ../cabinet_inspector/ all
-	../cabinet_inspector/cabinet_inspector
+	sudo ../cabinet_inspector/cabinet_inspector
 
 .PHONY: $(PHONY)
