Switched to our own modified `mmapper.c` instead of modifying the existing one, which they might not want.

--- a/user/test/FireFerrises/Makefile
+++ b/user/test/FireFerrises/Makefile
@@ -1,18 +1,22 @@
 PHONY += default
-default:
+default: all
 
 PHONY += all
-all:
+all: mmapper
 
-PHONY += test
-test:
+mmapper: mmapper.c
+	gcc -Wall -g mmapper.c -o mmapper
+
+mmapper.c:
+	cp ../cabinet_inspector/mmapper.c .
+	sed -i 's/pause()/fflush(stdout);\n\tpause()/' mmapper.c
 
 PHONY += clean
 clean:
-	rm -rf
+	rm -rf $(cat .gitignore)
 
-PHONY += test-all
-test-all:
+PHONY += test
+test:
 	$(MAKE) -C ../cabinet_inspector/ all
 	sudo ../cabinet_inspector/cabinet_inspector
 	sudo ./test.py
